# voicetranformer

./: DEMO_SUMMARY.md  NEURAL_ENGINE_README.md  README.md  build_demo.sh  build_info.json  deploy.sh  run_demo.sh  РЕАЛИЗАЦИЯ_ЗАВЕРШЕНА.md
dsp_core/: .gitignore  CHANGES.md  Cargo.toml  PLATFORM.md
dsp_core/src/: ai_effects.rs  lib.rs  neural_engine.rs
dsp_core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
frontend/: index.html
