[package]
name = "dsp_core"
version = "0.1.0"
edition = "2021"

# Для создания нативной библиотеки, которую можно вызывать из других языков
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Для кросс-платформенного аудио ввода/вывода
cpal = "0.15"

# Для качественного сдвига высоты тона и формант
signalsmith-stretch = "0.1.1"

# Для работы с WAV файлами (полезно для отладки)
hound = "3.5.1"

# Для удобной обработки ошибок
anyhow = "1.0"

# Для безблокировочной коммуникации между потоками
ringbuf = "0.3"
crossbeam-channel = "0.5"

# Для безопасного управления параметрами в реальном времени
atomic_float = "0.1"
