[package]
name = "dsp_core"
version = "0.1.0"
edition = "2021"

# Для создания нативной библиотеки, которую можно вызывать из других языков
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Убираем cpal полностью - используем только direct Core Audio

# Для качественного сдвига высоты тона и формант
signalsmith-stretch = "0.1.1"

# Для работы с WAV файлами (полезно для отладки)
hound = "3.5.1"

# Для удобной обработки ошибок
anyhow = "1.0"

# Для безблокировочной коммуникации между потоками
ringbuf = "0.3"
crossbeam-channel = "0.5"

# Для безопасного управления параметрами в реальном времени
atomic_float = "0.1"

# Для сериализации/десериализации
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Для WebAssembly интеграции
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "AudioContext",
  "AudioNode",
  "MediaDevices",
  "Navigator",
  "Window",
] }

# macOS/iOS специфичные зависимости
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.10"
core-foundation = "0.9"
objc = "0.2"

# Для работы с Core ML на Apple Silicon
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
metal = "0.27"
objc = "0.2"
core-foundation = "0.9"
libc = "0.2"
# Добавляем поддержку Core ML (опциональные зависимости)
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
candle-transformers = { version = "0.4", optional = true }
# Pin half crate to compatible version with candle-core's rand 0.8.5
half = { version = "=2.3.1", optional = true }

# Убираем поддержку Linux и Windows - только macOS M1/M2/M3/M4

[features]
default = ["apple-silicon"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
ai-effects = ["candle-core", "candle-nn", "candle-transformers", "half"]
apple-silicon = []  # Включает оптимизации для M1/M2/M3
